k8s/envoy/envoy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-proxy
  namespace: counter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy-proxy
  template:
    metadata:
      labels:
        app: envoy-proxy
    spec:
      containers:
        - name: envoy-proxy
          image: alextebbs/envoy-proxy:latest
          ports:
            - containerPort: 8080
