k8s/envoy/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-proxy
  namespace: counter
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: envoy-proxy
