k8s/envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: grpc_web
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: counter-api
                      cors:
                        allow_origin_string_match:
                          - prefix: "*"
                        allow_methods: "GET, PUT, DELETE, POST, OPTIONS"
                        allow_headers: "keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header,x-grpc-web,x-user-agent,grpc-timeout,authorization"
                        max_age: "1728000"
                        expose_headers: "custom-header,grpc-status,grpc-message"
                http_filters:
                  - name: envoy.filters.http.grpc_web
                  - name: envoy.filters.http.cors
                  - name: envoy.filters.http.router
  clusters:
    - name: counter-api
      connect_timeout: 0.25s
      type: logical_dns
      # dns_lookup_family: V4_ONLY
      lb_policy: round_robin
      http2_protocol_options: {}
      # typed_extension_protocol_options:
      #   envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
      #     "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
      #     explicit_http_config:
      #       http2_protocol_options: {}
      load_assignment:
        cluster_name: counter-api
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: counter-api
                      port_value: 50051
